--- a/vue-front/tbCrawler/package.json
+++ b/vue-front/tbCrawler/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^3.0.1",
     "axios": "^0.17.1",
     "echarts": "^4.0.4",
+    "countup": "^1.8.2",
     "iview": "~2.10.1"
   },
   "devDependencies": {
@@ -48,6 +49,8 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
